force-app/main/default/objects/Greenhouse_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Error_Email_Notifications__c</fullName>
        <label>Error Email Notifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_API_Key__c</fullName>
        <label>Harvest API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Applications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Candidates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Candidates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Jobs</label>
        <type>Checkbox</type>
    </fields>
    <label>Greenhouse Integration Settings</label>
</CustomObject>